@@ -17,9 +17,9 @@ plugins {
     id 'com.gorylenko.gradle-git-properties' version '2.3.1'
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'net.ltgt.apt' version '0.21'
-    id "info.solidsoft.pitest" version '1.6.0'
+    id "info.solidsoft.pitest" version '1.7.0'
     id 'org.owasp.dependencycheck' version '6.2.2'
-    id 'au.com.dius.pact' version '4.2.8'
+    id 'au.com.dius.pact' version '4.2.13'
 }
 
 apply plugin: 'org.springframework.boot'
@@ -104,6 +104,12 @@ task functional(type: Test) {
     setClasspath(sourceSets.e2e.runtimeClasspath)
     include "uk/gov/hmcts/reform/sscs/functional/**"
     exclude "uk/gov/hmcts/reform/sscs/smoke/**"
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 jacoco {
@@ -224,9 +230,11 @@ dependencyManagement {
         dependency group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.1'
         // resolves: CVE-2020-28052
         dependency group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.69'
+        //CVE-2021-40690
+        dependency group: 'org.apache.santuario', name: 'xmlsec', version: '2.2.3'
 
         // resolves: CVE-2019-10101, CVE-2019-10102, CVE-2019-10103, CVE-2020-15824
-        dependencySet(group: 'org.jetbrains.kotlin', version: '1.5.21') {
+        dependencySet(group: 'org.jetbrains.kotlin', version: '1.5.31') {
             entry 'kotlin-stdlib'
             entry 'kotlin-stdlib-common'
             entry 'kotlin-stdlib-jdk8'
@@ -237,11 +245,12 @@ dependencyManagement {
         dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.50') {
             entry 'tomcat-embed-core'
             entry 'tomcat-embed-el'
+            entry 'tomcat-annotations-api'
             entry 'tomcat-embed-websocket'
         }
 
         // CVE-2020-17521
-        dependencySet(group: 'org.codehaus.groovy', version: '3.0.8') {
+        dependencySet(group: 'org.codehaus.groovy', version: '3.0.9') {
             entry 'groovy'
             entry 'groovy-json'
             entry 'groovy-xml'
@@ -296,7 +305,7 @@ dependencyManagement {
         }
 
         //CVE-2021-30468
-        dependencySet(group: 'org.apache.cxf', version: '3.4.4') {
+        dependencySet(group: 'org.apache.cxf', version: '3.4.5') {
             entry 'cxf-core'
             entry 'cxf-rt-frontend-jaxrs'
             entry 'cxf-rt-rs-client'
@@ -334,15 +343,10 @@ dependencies {
 
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
     compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.1'
-    compile group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
-    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.13.4'
+    compile group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
+    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.15.0'
 
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
-
-    // Added to fix CVE-2020-13934, CVE-2020-13935, CVE-2020-17527
-    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.50'
-    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.50'
-    compile group: 'org.apache.tomcat', name: 'tomcat-annotations-api', version: '10.0.8'
 
     // Safe to remove once Spring update their dependencies - see CVE-2019-14439 and add 'com.fasterxml.jackson.core' configurations.all above
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
@@ -353,7 +357,7 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
 
     compile group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.6'
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.2'
 
     compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4'
     compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
@@ -361,27 +365,26 @@ dependencies {
     compile group: 'uk.gov.hmcts.reform', name: 'doc-assembly-client', version: '1.07'
     compile group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '7.0.0'
 
-    compile group: 'com.github.hmcts', name: 'sscs-common', version: '4.4.54-RC3-SSCS-9309'
-    compile group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.4.40'
+
+    compile group: 'com.github.hmcts', name: 'sscs-common', version: '4.5.3'
+    compile group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.4.42'
 
     compile group:'org.overviewproject', name: 'mime-types', version: '1.0.2'
 
+    compile 'javax.xml.bind:jaxb-api:2.3.1'
     testCompile group: 'io.rest-assured', name: 'rest-assured'
+    testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
+
     compile "org.projectlombok:lombok:$versions.lombok"
     annotationProcessor "org.projectlombok:lombok:$versions.lombok"
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
-    testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.27.0'
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.2'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
+    testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.28.0'
+    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.12.4'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
-    testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit-fluent', version: '2.27.0'
+    testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit-fluent', version: '2.28.0'
     testCompile group: 'io.github.artsok', name: 'rerunner-jupiter', version: '2.1.6'
-
-    // Added to fix CVE-2020-13934, CVE-2020-13935, CVE-2020-17527
-    testCompile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.50'
-    testCompile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.50'
-    testCompile group: 'org.apache.tomcat', name: 'tomcat-annotations-api', version: '10.0.8'
 
     testCompile 'pl.pragmatists:JUnitParams:1.1.1'
 
@@ -394,7 +397,7 @@ dependencies {
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$versions.junitJupiter"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$versions.junitJupiter"
 
-    e2eRuntime "org.junit.platform:junit-platform-commons:1.7.2"
+    e2eRuntime "org.junit.platform:junit-platform-commons:1.8.1"
 
     compile group: 'org.pitest', name: 'pitest', version: versions.pitest
     compile group:'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
@@ -414,7 +417,7 @@ dependencies {
     contractTestRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junitJupiter
 
     contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junitJupiter
-    contractTestRuntime "org.junit.platform:junit-platform-commons:1.7.0"
+    contractTestRuntime "org.junit.platform:junit-platform-commons:1.8.1"
 
     contractTestCompile(group: 'org.yaml', name: 'snakeyaml', version: '1.29') {
         force = true
@@ -423,7 +426,6 @@ dependencies {
     contractTestCompile sourceSets.main.runtimeClasspath
     contractTestCompile sourceSets.test.runtimeClasspath
 }
-
 // this is required to force Java running on the Azure Windows Server OS into using
 // UTF-8 as the default character set instead of windows-1252 which causes issues
 applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
